--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Progate by Mamank20</title>
+    <title>Progate by I55 Team</title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
     <div class="header">
-      <div class="header-logo">Progate</div>
+      <div class="header-logo">I55 Team</div>
       <div class="header-list">
         <ul>
-          <li>Tentang</li>
-          <li>Pelajaran</li>
-          <li>Hubungi Kami</li>
+          <li>HOME</li>
+          <li>SERVICE</li>
+          <li>ABOUT</li>
         </ul>
       </div>
     </div>
