--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
     </div>
 
     <div class="footer">
-      <div class="footer-logo">Progate</div>
+      <div class="footer-logo">I55 Team</div>
       <div class="footer-list">
         <ul>
-          <li>Tentang</li>
-          <li>Karier</li>
-          <li>Hubungi Kami</li>
+          <li>About</li>
+          <li>Team</li>
+          <li>Contact</li>
         </ul>
       </div>
     </div>
