--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Progate by I55 Team</title>
+    <title>HTML & CSS I BY LaMamang</title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
@@ -61,7 +61,7 @@
     </div>
 
     <div class="footer">
-      <div class="footer-logo">I55 Team</div>
+      <div class="footer-logo">LaMamang</div>
       <div class="footer-list">
         <ul>
           <li>About</li>
