--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="header">
-      <div class="header-logo">I55 Team</div>
+      <div class="header-logo">LaMamang</div>
       <div class="header-list">
         <ul>
           <li>HOME</li>
